force-app/main/default/objects/custom_create177__c/custom_create177__c.object-meta.xml
<CustomObject>
    <label>Custom created object177</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects177</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>