force-app/main/default/objects/custom_create177__c/fields/custom_create_177field604__c.field-meta.xml
<CustomField>
    <fullName>custom_create_177field604__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 177field604</label>
    <type>Checkbox</type>
</CustomField>