force-app/main/default/objects/custom_create177__c/fields/custom_create_177field633__c.field-meta.xml
<CustomField>
    <fullName>custom_create_177field633__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 177field633</label>
    <type>Checkbox</type>
</CustomField>